# windmar-demo

./: .env.standalone  .flake8  Dockerfile  LINKEDIN-POST.md  README.md  ROADMAP.md  docker-compose.demo.yml  docker-compose.standalone.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-demo.yml  docker-publish.yml
api/: auth.py  cache.py  cli.py  config.py  database.py  demo.py  forecast_layer_manager.py  health.py  live.py  main.py  middleware.py  models.py  rate_limit.py  resilience.py  state.py  tile_renderer.py  weather_fields.py  weather_service.py
api/reports/: noon_reports.py  pdf_generator.py  templates.py
api/routers/: charter_party.py  cii.py  engine_log.py  fueleu.py  optimization.py  routes.py  system.py  tiles.py  vessel.py  voyage.py  voyage_history.py  zones.py
api/schemas/: __init__.py  charter_party.py  cii.py  engine_log.py  fueleu.py  optimization.py  vessel.py  voyage.py  weather.py  zones.py
api/weather/: adrs_areas.py  area_config.py  default_coverage.py  formatters.py  frame_builder.py  ocean_mask.py  prefetch.py  router.py
data/: demo-engine-log-seed.sql  demo-noon-report-seed.sql
data/templates/: noon_report_template.xlsx
frontend/app/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/vessel/: page.tsx
frontend/app/voyages/: page.tsx
frontend/components/: AnalysisPanel.tsx  AnalysisTab.tsx  CalibrationPanel.tsx  InitialFitBounds.tsx  MapComponent.tsx  MapViewportProvider.tsx  ProfileCharts.tsx  RegulationsDropdown.tsx  RouteImport.tsx  StartupLoader.tsx  VoyageContext.tsx  VoyageDropdown.tsx  WaveInfoPopup.tsx  WeatherCanvasOverlay.tsx  WeatherGridLayer.tsx  WeatherLegend.tsx
frontend/hooks/: useWeatherReadiness.ts
frontend/lib/: api.ts  demoMode.ts  gridInterpolation.ts
scripts/: generate_engine_log_seed.py
src/: config.py  metrics.py  validation.py
src/calibration/: calibration_loop.py
src/compliance/: charter_party.py  cii.py  fueleu.py
src/data/: __init__.py  copernicus.py  copernicus_client.py  db_weather_provider.py  eca_zones.py  land_mask.py  regulatory_zones.py  strait_waypoints.py  tss_zones.py  weather_ingestion.py
src/database/: calibration.py  engine_log_parser.py  excel_parser.py
src/fusion/: fusion_engine.py
src/optimization/: base_optimizer.py  dijkstra_optimizer.py  grid_builder.py  grid_weather_provider.py  monte_carlo.py  numba_kernels.py  route_optimizer.py  router.py  routing_graph.py  seakeeping.py  temporal_weather_provider.py  vessel_calibration.py  vessel_model.py  voyage.py  weather_assessment.py
src/routes/: __init__.py  rtz_parser.py
src/sensors/: sbg_ellipse.py  sbg_nmea.py  timeseries.py  wave_estimator.py
src/visualization/: plotter.py
tests/: test_numba_kernels.py
tests/integration/: test_weather_preflight.py
tests/unit/: test_demo.py  test_routing_graph.py
