[project]
name = "windmar"
version = "0.1.4"
description = "Maritime route optimization for MR Product Tankers with weather-aware fuel consumption modeling"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "SL Mar" }]

dependencies = [
    # Core scientific computing
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",

    # Land mask for ocean detection
    "global-land-mask>=1.0.0",

    # HTTP requests for data download
    "requests>=2.31.0",

    # Copernicus weather data (ERA5 + CMEMS)
    "cdsapi>=0.7.0",
    "copernicusmarine>=2.0.0",
    "xarray>=2024.1.0",
    "netcdf4>=1.6.0",

    # Excel / CSV file parsing
    "openpyxl>=3.1.0",

    # Database & caching
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",

    # API framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",

    # Security
    "defusedxml>=0.7.1",
    "bcrypt>=4.1.0",
    "python-jose[cryptography]>=3.3.0",

    # Resilience & observability
    "tenacity>=8.2.0",
    "pybreaker>=1.0.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7.0",
    "cartopy>=0.21.0",
    "Pillow>=10.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
windmar-api = "api.main:run_server"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*", "api*"]

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | \.mypy_cache
    | \.pytest_cache
    | node_modules
    | frontend
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "node_modules",
    "frontend",
]

[tool.ruff.isort]
known-first-party = ["src", "api"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["frontend", "node_modules"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src", "api"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
